--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "justd-icons": "^1.10.25",
+    "motion": "^12.11.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "react": "^19.0.0",
     "react-aria-components": "^1.7.1",
